fix: wrap and spacing in footer

--- a/css/override.css
+++ b/css/override.css
@@ -43,3 +43,7 @@ hr {
   font-size: 2.5em;
   opacity: 0.3;
 }
+
+.footer-col-2 a { white-space: nowrap; }
+
+.footer-col-3 p { margin-left: 30px; }
